--- a/survey.html
+++ b/survey.html
@@ -38,6 +38,7 @@
       <!-- Survey Form -->
       <form action="index.html" autocomplete="on" method="post">
         <h2 class="shadow-lg p-3 mb-4 rounded">Students Survey Form</h2>
+        <p class="pt-2 pb-2">(Required fields are indicated by a <span class="star">*</span> mark )</p>
         <fieldset>
           <!-- Text boxes for first name, last name, street address, city, state, zip, telephone number, e-mail, 
             and date of survey, which are required fields. -->
